# brutus

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: core.rs  lib.rs  main.rs  strategy.rs  ui.rs
src/strategy/: dummy.rs  form.rs  get.rs  json.rs  mod.rs
