[package]
name = "brutus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.11"
log = "0.4.26"
memmap2 = "0.9.5"
rayon = "1.10.0"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.5.4"
